# CiccioSoft.Sqlite

./: .gitignore  ADONET_GAP_ANALYSIS.md  CiccioSoft.Data.Sqlite.Repository.slnx  CiccioSoft.Data.Sqlite.slnx  CiccioSoft.Sqlite.slnx  CiccioSoft.Sqlite.sublime-project  CiccioSoft.Sqlite.sublime-workspace  PROVIDER_SCOPE.md  README.md  TIMELINE_EVOLUTIVA.md  Todo.md  func_pclraw.txt
.github/: AGENTS.md  copilot-instructions.md
AdoNet.Specification.Tests/: AdoNet.Specification.Tests.csproj
CiccioSoft.Data.MySql.Interop/: CiccioSoft.Data.MySql.Interop.csproj  MySqlClient.cs  MySqlClientLibrary.cs  MySqlInteropException.cs  MySqlResultCode.cs  README.md
CiccioSoft.Data.Sqlite/: README.md  (+25 more)
CiccioSoft.Data.Sqlite.AdoNet.Specification.Tests/: CiccioSoft.Data.Sqlite.AdoNet.Specification.Tests.csproj  SqliteConnectionTests.cs  SqliteDbFactoryFixture.cs
CiccioSoft.Data.Sqlite.AsyncConcurrency.Tests/: AsyncConcurrencyTests.cs  CiccioSoft.Data.Sqlite.AsyncConcurrency.Tests.csproj  README.md
CiccioSoft.Data.Sqlite.Interop/: README.md  Sqlite3.cs  Sqlite3Backup.cs  Sqlite3Handle.cs  Sqlite3Stmt.cs  Sqlite3StmtHandle.cs  SqliteColumnType.cs  SqliteErrorHelper.cs  SqliteExtendedErrorCode.cs  SqliteInteropException.cs  SqliteOpenFlags.cs  SqlitePrepareFlags.cs  SqliteResult.cs  SqliteType.cs  generate.rsp
CiccioSoft.Data.Sqlite.Interop.Example/: CiccioSoft.Data.Sqlite.Interop.Example.csproj  ImageRepository.cs  Program.cs  UserRepository.cs  Util.cs  test.db
CiccioSoft.Data.Sqlite.Tests.Conformance/: CiccioSoft.Data.Sqlite.Tests.Conformance.csproj  ConnectionTests.cs  DataReaderTests.cs  DbFactoryFixture.cs  DbProviderFactoryTests.cs  GetValueConversionTests.cs  ParameterTests.cs  SelectValueFixture.cs  SqliteDatabase.cs  Utility.cs
sqlite3glue/: CMakeLists.txt
sqlite3glue/include/: SQLiteGlue.h
sqlite3glue/src/: SQLiteGlue.c
sqlite3glue3/: CMakeLists.txt
sqlite3glue3/include/: sqlite3glue.h
sqlite3glue3/src/: sqlite3glue.c
(+292 files in other folders)
